Сервлеты - написание сервлетов, страниц html, удаление лишних теперь классов

--- a/src/main/webapp/jsp/start.html
+++ b/src/main/webapp/jsp/start.html
@@ -12,15 +12,17 @@
         <div>
             <tr>
                 <td>
-                    <a href="/Mon/registration">
-                        <button type="button" class="btn btn-primary">Регистрация</button>
+                    <!--  Mo -->
+                    <a href="/Mo/registration">
+                        <button class="btn btn-primary" type="button">Регистрация</button>
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="@{|/login|}">
-                        <button type="button" class="btn btn-primary">Вход</button>
+                    <!--  Mo -->
+                    <a href="/Mo/login">
+                        <button class="btn btn-primary" type="button">Вход</button>
                     </a>
                 </td>
             </tr>
