--- a/src/main/webapp/jsp/login/admin/admin.html
+++ b/src/main/webapp/jsp/login/admin/admin.html
@@ -10,32 +10,32 @@
 
 <div>
     <td>
-        <a href="/Mo/all-users"> view of all users </a>
+        <a href="/ms/all-users"> view of all users </a>
     </td>
 </div>
 <div>
     <td>
-        <a href="/Mo/last-data-of-user"> view actual data of user </a>
+        <a href="/ms/last-data-of-user"> view actual data of user </a>
     </td>
 </div>
 <div>
     <td>
-        <a href="/Mo/spec-month-user"> view data for a specific month of user </a>
+        <a href="/ms/spec-month-user"> view data for a specific month of user </a>
     </td>
 </div>
 <div>
     <td>
-        <a href="/Mo/history-data-user"> view history of data of user </a>
+        <a href="/ms/history-data-user"> view history of data of user </a>
     </td>
 </div>
 <div>
     <td>
-        <a href="/Mo/view-user-history"> view history of user </a>
+        <a href="/ms/view-user-history"> view history of user </a>
     </td>
 </div>
 <div>
     <td>
-        <a href="/Mo/logout"> exit </a>
+        <a href="/ms/logout"> exit </a>
     </td>
 </div>
 </body>
