--- a/src/main/webapp/jsp/login/client/client.html
+++ b/src/main/webapp/jsp/login/client/client.html
@@ -11,31 +11,31 @@
 <div>
     <td>
         <!-- Mo  удалить!!! -->
-        <a href="/Mo/submit-data"> submission of data </a>
+        <a href="/ms/submit-data"> submission of data </a>
     </td>
 </div>
 <div>
     <td>
         <!-- Mo  удалить!!! -->
-        <a href="/Mo//view-last-data"> view actual data </a>
+        <a href="/ms//view-last-data"> view actual data </a>
     </td>
 </div>
 <div>
     <td>
         <!-- Mo  удалить!!! -->
-        <a href="/Mo/spec-month}"> view data for a specific month </a>
+        <a href="/ms/spec-month}"> view data for a specific month </a>
     </td>
 </div>
 <div>
     <td>
         <!-- Mo  удалить!!! -->
-        <a href="/Mo/view-data-history"> view the history of your data </a>
+        <a href="/ms/view-data-history"> view the history of your data </a>
     </td>
 </div>
 <div>
     <td>
         <!-- Mo  удалить!!! -->
-        <a href="/Mo/logout"> exit </a>
+        <a href="/ms/logout"> exit </a>
     </td>
 </div>
 </body>
