--- a/src/main/webapp/jsp/reg/reg.html
+++ b/src/main/webapp/jsp/reg/reg.html
@@ -15,7 +15,7 @@
             <span th:text="${errorMessage}"></span>
         </div>
         <!--  Mo -->
-        <form th:action="@{/Mo/registration}" method="post">
+        <form th:action="@{/ms/registration}" method="post">
 
             <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="login" name="login">
