--- a/src/main/webapp/jsp/start.html
+++ b/src/main/webapp/jsp/start.html
@@ -13,7 +13,7 @@
             <tr>
                 <td>
                     <!--  Mo -->
-                    <a href="/Mo/registration">
+                    <a href="/ms/registration">
                         <button class="btn btn-primary" type="button">Регистрация</button>
                     </a>
                 </td>
@@ -21,7 +21,7 @@
             <tr>
                 <td>
                     <!--  Mo -->
-                    <a href="/Mo/login">
+                    <a href="/ms/login">
                         <button class="btn btn-primary" type="button">Вход</button>
                     </a>
                 </td>
