--- a/src/main/webapp/jsp/login/admin/methods/userHistory.html
+++ b/src/main/webapp/jsp/login/admin/methods/userHistory.html
@@ -15,7 +15,7 @@
             <span th:text="${errorMessage}"></span>
         </div>
         <!--  Mo -->
-        <form method="post" th:action="@{/Mo/user-history}">
+        <form method="post" th:action="@{/ms/user-history}">
 
             <div class="form-floating mb-3">
                 <input class="form-control" id="user_login" name="user_login" type="text">
