--- a/src/main/webapp/jsp/login/client/methods/specMonth.html
+++ b/src/main/webapp/jsp/login/client/methods/specMonth.html
@@ -15,7 +15,7 @@
             <span th:text="${errorMessage}"></span>
         </div>
         <!--  Mo -->
-        <form th:action="@{/Mo/spec-month}" method="post">
+        <form th:action="@{/ms/spec-month}" method="post">
             Введите месяц(1-12)
             <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="month" name="month">
