--- a/src/main/webapp/jsp/login/client/methods/submitData.html
+++ b/src/main/webapp/jsp/login/client/methods/submitData.html
@@ -15,7 +15,7 @@
             <span th:text="${errorMessage}"></span>
         </div>
         <!--  Mo -->
-        <form method="post" th:action="@{/Mo/submitData}">
+        <form method="post" th:action="@{/ms/submitData}">
 
             <div class="form-floating mb-3">
                 <input class="form-control" id="heating" name="heating" type="text">
