--- a/src/main/webapp/jsp/login/login.html
+++ b/src/main/webapp/jsp/login/login.html
@@ -15,7 +15,7 @@
             <span th:text="${errorMessage}"></span>
         </div>
         <!--  Mo -->
-        <form method="post" th:action="@{/Mo/login}">
+        <form method="post" th:action="@{/ms/login}">
 
             <div class="form-floating mb-3">
                 <input class="form-control" id="login" name="login" type="text">
